plang/testing/logs/false-incorrect/63/program63.p.p
x iPH LgMC.

pQ (pJbW pei1 ztQhK rdL mDDD) (e (j5 YD U5yn rIpJ7 (mfyw (TrJDn) zJmq))).
q5v (yw elqU (IY) (YGv)) (wLt sJ X (B9KuU)) wi.


mKCB3 :- cAp4 (bsKt) (PIa) (Ti92).

f3 A :- aL2y (bc U v6T8x) (vYgUW qPjtx), ve96 eEaDb l, nKRI KJu (KZ), fxs7J IbiZC (RHJP) sPhto; dZo (ANiX) L (A5vm); (xGWrw (Kn) (t (FQd6) (fG (t s1 SaiW))), (fm)), kiEaJ (fh0Vg (Vi) (G) J2Pd (w NBp BQGx (ZqryL) (qY OiVb5))) Rgp (JQ) o; (xi (ou (uLZfF (qL) (uYDA) Q9uws) Uw) (i (f r E3 (eK s (Qi1DB) Y)) (F)) w63), vAbO; wIkK (f AZmfu (g iYB zKt WmsQ fWeQs)) (SMlT) (IYA) mS.


mIOF (H6tk) (bC) NIH4u :- (iUhz0 BOT9d (U)); q y mL (LP4); (o AB41s, trNH d); ((m fN, y (s (UK) zk) O0KH9 vOlo, gPu)).
gXV J (t1gb D2V2u dKz (T) jD).


rU3O QjBu (bo PTl (FgQDj) (hh6)) (Y) (mX9MF (vLE) fZ z0r2p) :- igv6X (dncf SaZ (Fzt) D w6dt).
oAlen sa2aD (Uw7).


rR (KOE) W6o6 rRjJ.
u vm60E.


i CoqNa (NP) (rL2 (iH6D zc vVx PH0u cm) P (YBbL)) :- (c9Foa, (zx yy BsvRk (bo D1 HAR lSDwL)); bVPc (qwj) b (WbgLl) LHnGj, ((x5 (rz) tZd5J))).


rDmrB.


? (aEIin hf3Us DW).



